# lzdr-comp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench_speed_mem.py  justfile
src/: cli.cpp  cli.h  compressor.cpp  compressor.h  flexible_lzdr_max_radix_trie.cpp  flexible_lzdr_max_radix_trie.h  flexible_lzdr_radix_trie.cpp  flexible_lzdr_radix_trie.h  flexible_lzw_naive.cpp  flexible_lzw_naive.h  lzd_plus_linear_time.cpp  lzd_plus_linear_time.h  lzd_radix_tree.cpp  lzd_radix_tree.h  lzdr_linear_time.cpp  lzdr_linear_time.h  main.cpp  radix_trie.cpp  radix_trie.h  slice.cpp  slice.h  std_flexible_lzdr_radix_trie.cpp  std_flexible_lzdr_radix_trie.h  std_flexible_lzw_naive.cpp  std_flexible_lzw_naive.h  test.cpp  test.h
subprojects/: tudocomp-fix-build.patch
